# python_data_visualization_plotly_dash

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Udemy.txt  pyproject.toml  python_data_visualization_plotly_dash.code-workspace  requirements.txt
app/: app1.py  config.py  logging_conf.py  requirements.txt  start-app  start-app.py
