[tool.poetry]
name = "python-data-visualization-plotly-dash"
version = "0.1.0"
description = ""
authors = ["Janus Cheng <drxaero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dash = "^3.0.2"
pandas = "^2.2.3"
dash-bootstrap-templates = "^2.1.0"
dash-bootstrap-components = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# follows https://github.com/psf/black/blob/main/docs/compatible_configs/isort/pyproject.toml
[tool.isort]
profile = 'black'

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]
