[tool.poetry]
name = "python-data-visualization-plotly-dash"
version = "0.1.0"
description = ""
authors = ["Janus Cheng <drxaero@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
dash = "^3.0.2, <=3.0.4"
pandas = "^2.2.3"
dash-bootstrap-templates = "^2.1.0"
dash-bootstrap-components = "^2.0.0"
opentelemetry-distro = {extras = ["otlp"], version = "^0.55b1"}


# Manually pasted the output of `poetry run opentelemetry-bootstrap --action=requirements`
opentelemetry-instrumentation-asyncio = "^0.55b1"
opentelemetry-instrumentation-dbapi = "^0.55b1"
opentelemetry-instrumentation-logging = "^0.55b1"
opentelemetry-instrumentation-sqlite3 = "^0.55b1"
opentelemetry-instrumentation-threading = "^0.55b1"
opentelemetry-instrumentation-urllib = "^0.55b1"
opentelemetry-instrumentation-wsgi = "^0.55b1"
opentelemetry-instrumentation-click = "^0.55b1"
opentelemetry-instrumentation-flask = "^0.55b1"
opentelemetry-instrumentation-grpc = "^0.55b1"
opentelemetry-instrumentation-jinja2 = "^0.55b1"
opentelemetry-instrumentation-requests = "^0.55b1"
opentelemetry-instrumentation-tortoiseorm = "^0.55b1"
opentelemetry-instrumentation-urllib3 = "^0.55b1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]  # https://docs.astral.sh/ruff/settings/#top-level
line-length = 120
exclude = ["**/migrations/", "**/manage.py"]
target-version = "py312"

[tool.ruff.lint]  # https://docs.astral.sh/ruff/settings/#lint
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]
ignore = [
    "E402",  # module level import not at top of file
]

[tool.ruff.format]  # https://docs.astral.sh/ruff/settings/#format
quote-style = "double"  # Quote style: double quotes is default, explicitly stated here for clarity

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]
